--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "ajv": "^6.12.6",
-    "ajv-keywords": "^3.5.2",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
@@ -30,7 +28,6 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5",
-    "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^3.1.0",
     "web-vitals": "^2.1.0"
   },
@@ -38,7 +35,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -59,9 +57,16 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
+    "@babel/eslint-parser": "7.24.7",
+    "@babel/preset-env": "7.24.7",
+    "@babel/preset-react": "7.24.7",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
     "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier": "3.3.2",
     "source-map-loader": "^5.0.0"
   }
 }
