--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
-    "react-credit-cards-2": "^1.0.2",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
@@ -58,6 +57,7 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "7.24.7",
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
     "@babel/preset-env": "7.24.7",
     "@babel/preset-react": "7.24.7",
     "eslint": "8.57.0",
