--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
-    "react": "^18.3.1",
+    "cookie": "0.6.0",
+    "next": "14.2.5",
+    "next-auth": "4.24.7",
+    "next-redux-wrapper": "8.1.0",
+    "prop-types": "15.8.1",
+    "react": "18.3.1",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18.3.1",
+    "react-dom": "18.3.1",
     "react-loader-spinner": "^6.1.6",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
@@ -31,8 +36,9 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint . --fix"
